fixed body overflow issue

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -33,7 +33,9 @@ body
   font-family: $slab-font
   font-weight: 400
   min-width: 320px
+  overflow-x: hidden
   padding-top: 30px
+  width: 100%
 
 header
   margin-bottom: 30px
